@@ -14,6 +14,7 @@ Revision history for Perl module Git::PurePerl:
      - split methods into those that returns sha1s and those that
        return objects
      - add class to index packs
+     - pass the hostname in the protocol (to make github work)
 
 0.38 Thu Dec 18 10:26:49 GMT 2008
      - add init() method to create a new repository
